test/compilable/imports/g313staticif.d
module imports.g313staticif;
void bug()
{
}
