test/fail_compilation/fail22.d
void main()
{
   char[] bug = "Crash";
   foreach(char ; bug){}
}

